<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.StartFragment">


    <TextView
        android:id="@+id/hello_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@color/design_default_color_primary"
        android:text="@string/hello_user_text"
        android:textColor="@color/white"
        android:textSize="@dimen/hello_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_start_fragment_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hello_user_text">

        <TextView
            android:id="@+id/counter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/start_margin"
            android:background="@color/design_default_color_primary"
            android:text="@string/start_counter_text"
            android:textColor="@color/white"
            android:textSize="@dimen/hello_text_size" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/start_margin"
            android:autofillHints="@string/hints_counter"
            android:background="@color/design_default_color_primary"
            android:text="@string/start_counter"
            android:textColor="@color/white"
            android:textSize="@dimen/hello_text_size" />

        <TextView
            android:id="@+id/counter_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/start_margin"
            android:background="@color/design_default_color_primary"
            android:text="@string/start_counter_end"
            android:textColor="@color/white"
            android:textSize="@dimen/hello_text_size" />

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:contentDescription="@string/open_basket"
        android:src="@mipmap/open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_start_fragment_counter" />

    <ImageButton
        android:id="@+id/btn_about_the_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_info_24"
        android:contentDescription="@string/open_information" />


</androidx.constraintlayout.widget.ConstraintLayout>