<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.new_food.AddNewFoodFragment">

   <EditText
       android:id="@+id/input_name_food"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       tools:ignore="LabelFor"
       style="@style/EditText"
       android:autofillHints="" />

    <EditText
        android:id="@+id/input_quantity_food"
        style="@style/EditText"
        android:autofillHints=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name_food"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_quantity_food">

        <EditText
            android:id="@+id/input_datetime_food"
            style="@style/EditText"
            android:hint="@string/shelf_life"
            tools:ignore="LabelFor"
            android:textSize="@dimen/item_text_food"
            android:layout_margin="@dimen/app_margin"
            android:autofillHints="" />

        <EditText
            android:id="@+id/input_grocery_food"
            style="@style/EditText"
            android:textSize="@dimen/item_text_food"
            android:layout_margin="@dimen/app_margin"
            android:hint="@string/categories"
            tools:ignore="LabelFor"
            android:autofillHints="" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_margin"
        android:text="@string/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>